# clipboard-processor

./: .gitignore  DEMO.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: generate_demo.py  install  test
src/clipboard_processor/: cli.py
src/clipboard_processor/input/: __init__.py  _base.py  pyperclip.py  xclip.py
src/clipboard_processor/output/: __init__.py  _base.py  notify.py  stdout.py  ui.py
src/clipboard_processor/plugins/: __init__.py  _base.py  aws_account_id.py  base64.py  cron.py  hex.py  jwt.py  oui.py  ulid.py  unixtime.py  vin.py  well_known.py
systemd/: clipboard-processor.service
test/: test_cli.py
test/plugins/: test_aws_account.py  test_base64.py  test_jwt.py  test_ulid.py  test_unixtime.py  test_vin.py
tests/: conftest.py  test_cli.py  test_cli_notify.py  test_cli_ui.py  test_cli_xclip_primary.py  test_plugins.py  util.py
tests/plugins/: test_aws_account.py  test_cron.py  test_hex.py  test_jwt.py  test_oui.py  test_ulid.py  test_unixtime.py  test_vin.py  test_well_known.py
