[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "clipboard-processor"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
    { name = "Thomas Reifenberger", email = "tom-mi@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyperclip>=1.9.0",
]
[project.optional-dependencies]
jwt = [
    "pyjwt[crypto]",
]
vin = [
    "vininfo",
]
ulid = [
    "python-ulid",
]
notify = [
    "desktop-notifier",
]
all = [
    "clipboard-processor[jwt,vin,ulid,notify]",
]

[project.scripts]
clipboard-processor = "clipboard_processor.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]
features = [
    "all",
]
path = ".venv"

[tool.hatch.envs.hatch-test]
extra-args = ["--strict-markers"]

[tool.hatch.envs.hatch-test.overrides]
matrix.installation.extra-args = { value = ["--without-extra-dependencies"], if = ["minimal"] }
matrix.installation.features = [{ value = "all", if = ["full"] }]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]
installation = ['full']

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]
installation = ["minimal"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/clipboard_processor/_version.py"
